package DispositivePackage;
syntax = "proto3";


message PatternIdentifierMessage {
    string Description = 1;
}

message BroadcastMessage{
    string Description = 1;
    required string Command = 2;

}

message IdentifierMessage {
    string Description = 1;
    string Name = 2;
    string SensorType = 3;


}

message EditGateStatusMessage {
    string Description = 1;
    string Status = 2;
}

message GateStatusMessage {
    string Description = 1;
    string Status = 2;
}